tester/testsuite/extensions/objects1/bad/bad008.jl
class A {
    int x;
}

int main() {
    A a = new A;
    printInt(a.x);
    return 1;
}
